Fix image URL in Air Quality notebook

--- a/notebook/Air_Quality_final.ipynb
+++ b/notebook/Air_Quality_final.ipynb
@@ -14,7 +14,7 @@
    "id": "12777794-4b4c-474c-965a-c0b7d0591eb2",
    "metadata": {},
    "source": [
-    "![Air Quality](https://raw.githubusercontent.com/claudiarpaim/Air Quality/main/figures/capa.png)\n",
+    "![Air Quality](https://raw.githubusercontent.com/claudiarpaim/Air-Quality/main/figures/capa.png)\n",
     "\n",
     "**Nota:** Imagem gerada por Inteligência Artificial, utilizada exclusivamente para fins ilustrativos e educacionais."
    ]
